# vibelatex

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  server.js
docs/: deployment.md
public/: app.js  index.html  style.css
public/lib/: README.md
vibelatex-desktop/: .gitignore  README.md
vibelatex-desktop/src/: index.html  main.js  styles.css
vibelatex-desktop/src-tauri/: Cargo.toml  tauri.conf.json
vibelatex-desktop/src-tauri/capabilities/: default.json
vibelatex-desktop/src-tauri/src/: commands.rs  main.rs  watcher.rs
vibelatex-desktop/src/lib/: README.md
workspace/demo/: main.tex
