[package]
name = "vibelatex-desktop"
version = "0.1.0"
description = "A minimal desktop LaTeX IDE built with Tauri."
authors = ["VibeLaTeX"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify = "6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "rustls-tls"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "time"] }
